fix(fieldlabel): add missing color token (#1563)

--- a/components/fieldlabel/index.css
+++ b/components/fieldlabel/index.css
@@ -10,6 +10,9 @@ OF ANY KIND, either express or implied. See the License for the specific languag
 governing permissions and limitations under the License.
 */
 
+.spectrum-FieldLabel {
+  --spectrum-fieldlabel-color: var(--spectrum-neutral-subdued-content-color-default);
+}
 
 /* Component level tokens currently missing in core-tokens as of July 2022 or are simply incorrect */
 .spectrum--medium {
@@ -95,6 +98,8 @@ governing permissions and limitations under the License.
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: auto;
   font-smoothing: subpixel-antialiased;
+
+  color: var(--spectrum-fieldlabel-color);
 }
 
 /* international lang support */
